[package]
name = "serdif"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.105"
anyhow = "1.0.28"
serde_json = "1.0.50"

[lib]
test = false
doctest = false

[[test]]
name = "tests"
path = "src/tests.rs"
